@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
interface Dance

Dance <|.. Bird

Bird <|-- Pigeon
Bird <|-- Penguin
Bird <|-- Parrot

interface Dance {
+spin(): void
+doTheCaterpillar(): void
+jump(): void
}

abstract class Bird {
#name: string
#color: string
{abstract}+speak(): void
+fly(): void
}

class Parrot {
+speak(): void
}

class Pigeon {
+speak(): void
+eatPizza(): void
}

class Penguin {
+speak(): void
+fly(): void
}

@enduml